kubernetes-manifests/apache-struts/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: apache-struts
  labels:
    demo: roadshow
    repo: demo-apps
