kubernetes-manifests/apache-struts/service-apache-struts.yaml
apiVersion: v1
kind: Service
metadata:
  name: apache-struts
  namespace: apache-struts
  labels:
    app: apache-struts
    demo: roadshow
    repo: demo-apps
spec:
  selector:
    app: apache-struts
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
